--- a/projects/ngx-minimal-datepicker/package.json
+++ b/projects/ngx-minimal-datepicker/package.json
@@ -1,12 +1,16 @@
 {
   "name": "ngx-minimal-datepicker",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "type": "module",
   "private": false,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jeremyallebe/ngx-minimal-datepicker"
+  },
   "peerDependencies": {
-    "@angular/common": "^13.3.0",
-    "@angular/core": "^13.3.0",
-    "moment": "^2.29.3"
+    "@angular/common": ">=14.1.0",
+    "@angular/core": ">=14.1.0",
+    "moment": ">=2.29.3"
   },
   "dependencies": {
     "tslib": "^2.3.0"
